# advent-of-code-2021

./: README.md  pyproject.toml
.github/workflows/: aoc_badges.yml
puzzles/: 01-01-12.md  02-02-12.md
src/: 01-01-12.py  02-02-12.py
