[tool.poetry]
name = "advent-of-code-2021"
version = "0.0.1"
description = "Advent of Code 2021 with Poetry dependency management"
authors = ["Irem Erturk <irem.erturk93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
